tests/unit-fail-compilation/flexible-array.c.ref
flexible-array.c:8:1: error: Field f has incomplete type or contains a flexible array member.
  Constraint violation (CV-CDT3). See C11 sec. 6.7.2.1:2
Translation failed (config dumped). Run kcc -d flexible-array.c to see commands run.
